style: format code using AOSP style
Signed-off-by: adriik <adriik.linux@proton.me>